Fix spending adjustment percent control overlap

--- a/src/app.css
+++ b/src/app.css
@@ -2261,7 +2261,7 @@ body {
 
 :root {
   --spending-adjustment-age-input-width: 92px;
-  --spending-adjustment-value-input-width: 110px;
+  --spending-adjustment-value-input-width: 104px;
 }
 
 .spending-adjustments-compact {
@@ -2363,15 +2363,7 @@ body {
   text-align: right;
   font-variant-numeric: tabular-nums;
   font-feature-settings: "tnum" 1;
-}
-
-.spending-adjustment-value-shell .input-suffix {
-  right: 31px;
-  color: #567068;
-}
-
-.spending-adjustment-value-shell.has-suffix.has-stepper input {
-  padding-right: 52px;
+  padding-right: 48px;
 }
 
 .spending-adjustment-value-shell {
